// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionSummary /> Should render expected JSX for initial props (before the step function starts) 1`] = `
<div
  className="execution-summary mt-3 mb-3"
>
  <div
    className="mt-1 mb-1 execution-status"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <ExecutionStatus
        status="QUEUED"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="mt-1 mb-1"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <IdentifierLine
        commit="edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        executionNum={5}
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      className="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <StartLine
        conclusionTime={null}
        createTime="2018-07-27T16:52:18.099Z"
        event={null}
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
</div>
`;

exports[`<ExecutionSummary /> Should render expected JSX for initial props (before the step function starts) 2`] = `
<div
  class="execution-summary mt-3 mb-3"
>
  <div
    class="mt-1 mb-1 execution-status"
  >
    <span
      style="color:#6c757d"
    >
      <i
        class="far fa-clock fa-fw mr-1"
      />
      <span>
        Queued
      </span>
    </span>
  </div>
  <div
    class="mt-1 mb-1"
  >
    <span
      class="d-inline-flex flex-wrap"
    >
      <span
        class="mr-2"
      >
        <i
          class="fab fa-github fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar"
        >
          foo/bar
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-code-branch fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar/commit/edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        >
          edd98b1508
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-shipping-fast fa-fw text-muted mr-1"
        />
        #5
      </span>
    </span>
  </div>
  <div
    class="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      class="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <span>
      Started 
      <strong>
        <time
          class="position-relative"
          datetime="2018-07-27T16:52:18.099Z"
          id="foobar"
          tabindex="0"
        >
          <span>
            next year
          </span>
        </time>
      </strong>
    </span>
  </div>
</div>
`;

exports[`<ExecutionSummary /> Should render expected JSX for minimal in-progress props (after the step function starts) 1`] = `
<div
  className="execution-summary mt-3 mb-3"
>
  <div
    className="mt-1 mb-1 execution-status"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <ExecutionStatus
        status="IN_PROGRESS"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="mt-1 mb-1"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <IdentifierLine
        commit="edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        executionNum={5}
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      className="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <StartLine
        conclusionTime={null}
        createTime="2018-07-27T16:52:18.099Z"
        event={
          Object {
            "action": "opened",
            "event": "pull_request",
            "pull_request": Object {
              "base": Object {
                "ref": "foobar-branch-a",
                "sha": "33bf84a4563dcd16e027c0c6cf2a08984740d3f5",
              },
              "head": Object {
                "ref": "foobar-branch-b",
                "sha": "10145a195894f17110b6d9edb9ff76697cc8d327",
              },
              "id": 204485519,
              "number": 3,
            },
          }
        }
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
</div>
`;

exports[`<ExecutionSummary /> Should render expected JSX for minimal in-progress props (after the step function starts) 2`] = `
<div
  class="execution-summary mt-3 mb-3"
>
  <div
    class="mt-1 mb-1 execution-status"
  >
    <span
      style="color:#17a2b8"
    >
      <i
        class="fas fa-hourglass-start fa-fw mr-1"
      />
      <span>
        In Progress
      </span>
    </span>
  </div>
  <div
    class="mt-1 mb-1"
  >
    <span
      class="d-inline-flex flex-wrap"
    >
      <span
        class="mr-2"
      >
        <i
          class="fab fa-github fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar"
        >
          foo/bar
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-code-branch fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar/commit/edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        >
          edd98b1508
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-shipping-fast fa-fw text-muted mr-1"
        />
        #5
      </span>
    </span>
  </div>
  <div
    class="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      class="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <span>
      Started 
      <strong>
        <time
          class="position-relative"
          datetime="2018-07-27T16:52:18.099Z"
          id="foobar"
          tabindex="0"
        >
          <span>
            next year
          </span>
        </time>
      </strong>
       after 
      <strong>
        <span>
          opening
        </span>
      </strong>
      
        
      <a
        href="https://git.com/foo/bar/pull/3"
      >
        <span>
          pull request #3
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`<ExecutionSummary /> Should render expected JSX for succeeded execution 1`] = `
<div
  className="execution-summary mt-3 mb-3"
>
  <div
    className="mt-1 mb-1 execution-status"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <ExecutionStatus
        status="SUCCEEDED"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="mt-1 mb-1"
  >
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <IdentifierLine
        commit="edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        executionNum={5}
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      className="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <StartLine
        conclusionTime={null}
        createTime="2018-07-27T16:52:18.099Z"
        event={
          Object {
            "action": "opened",
            "event": "pull_request",
            "pull_request": Object {
              "base": Object {
                "ref": "foobar-branch-a",
                "sha": "33bf84a4563dcd16e027c0c6cf2a08984740d3f5",
              },
              "head": Object {
                "ref": "foobar-branch-b",
                "sha": "10145a195894f17110b6d9edb9ff76697cc8d327",
              },
              "id": 204485519,
              "number": 3,
            },
          }
        }
        githubHost="git.com"
        owner="foo"
        repo="bar"
      />
    </ErrorBoundaryWithContext>
  </div>
  <div
    className="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      className="fas fa-stop-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <ErrorBoundaryWithContext
      errorMessage={
        <span>
          <em>
            (Render Error)
          </em>
        </span>
      }
    >
      <StopLine
        conclusionTime="2018-07-27T17:00:00.000Z"
        createTime="2018-07-27T16:52:18.099Z"
        githubHost="git.com"
        stopRequestTime={null}
        stopUser={null}
      />
    </ErrorBoundaryWithContext>
  </div>
</div>
`;

exports[`<ExecutionSummary /> Should render expected JSX for succeeded execution 2`] = `
<div
  class="execution-summary mt-3 mb-3"
>
  <div
    class="mt-1 mb-1 execution-status"
  >
    <span
      style="color:#28a745"
    >
      <i
        class="fas fa-check fa-fw mr-1"
      />
      <span>
        Succeeded
      </span>
    </span>
  </div>
  <div
    class="mt-1 mb-1"
  >
    <span
      class="d-inline-flex flex-wrap"
    >
      <span
        class="mr-2"
      >
        <i
          class="fab fa-github fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar"
        >
          foo/bar
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-code-branch fa-fw text-muted mr-1"
        />
        <a
          href="https://git.com/foo/bar/commit/edd98b1508f303eabaa12464f1dbb8ec5aace9de"
        >
          edd98b1508
        </a>
      </span>
      <span
        class="mr-2"
      >
        <i
          class="fas fa-shipping-fast fa-fw text-muted mr-1"
        />
        #5
      </span>
    </span>
  </div>
  <div
    class="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      class="fas fa-play-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <span>
      Started 
      <strong>
        <time
          class="position-relative"
          datetime="2018-07-27T16:52:18.099Z"
          id="foobar"
          tabindex="0"
        >
          <span>
            next year
          </span>
        </time>
      </strong>
       after 
      <strong>
        <span>
          opening
        </span>
      </strong>
      
        
      <a
        href="https://git.com/foo/bar/pull/3"
      >
        <span>
          pull request #3
        </span>
      </a>
    </span>
  </div>
  <div
    class="d-flex align-items-baseline mt-1 mb-1"
  >
    <i
      class="fas fa-stop-circle fa-fw text-muted mr-1 flex-shrink-0"
    />
    <span>
      Concluded after 
      <strong>
        <time
          class="position-relative"
          datetime="1970-01-18T17:45:10.800Z"
          id="foobar"
          tabindex="0"
        >
          <span>
            7.7 minutes
          </span>
        </time>
      </strong>
    </span>
  </div>
</div>
`;
